Added README, LICENSE, fixed prefix for CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 project(hackrf_sweeper LANGUAGES C CXX)
 set(MAJOR_VERSION 0)
 set(MINOR_VERSION 1)
-set(PACKAGE libhackrf_sweeper)
+set(PACKAGE hackrf_sweeper)
 set(VERSION_STRING ${MAJOR_VERSION}.${MINOR_VERSION})
 set(VERSION ${VERSION_STRING})
 add_definitions(-DLIBRARY_VERSION="${VERSION_STRING}")
