--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies (Ubuntu)
       run: |
         sudo apt update
-        sudo apt install libfftw3-dev libhackrf-dev libczmq-dev libzmq5 libzmq3-dev
+        sudo apt install libfftw3-dev libhackrf-dev libczmq-dev libzmq5 libzmq3-dev libmsgpack-dev
       if: matrix.os == 'ubuntu-latest'
 
     - name: Create Build Environment
