Added missing include for sys/time.h (needed for building on OS X)

--- a/.github/workflows/build_osx.yml
+++ b/.github/workflows/build_osx.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  host:
+  build_osx:
     strategy:
       # Don't cancel all builds when one fails
       fail-fast: false
