--- a/.github/workflows/build_osx.yml
+++ b/.github/workflows/build_osx.yml
@@ -46,15 +46,15 @@ jobs:
     - name: Install (libhackrf)
       working-directory: ${{github.workspace}}/hackrf/host/libhackrf/build
       run: |
-        sudo cmake --install . --config Release
-        echo "HACKRF_INSTALL_DIR=/usr/local" >> $GITHUB_ENV
+        sudo cmake --install . --config Release --prefix=$GITHUB_WORKSPACE/install
+        echo "HACKRF_INSTALL_DIR=$GITHUB_WORKSPACE/install" >> $GITHUB_ENV
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{github.workspace}}/build
 
     - name: Configure CMake
       working-directory: ${{github.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE/ -DCMAKE_BUILD_TYPE=Release -DLIBHACKRF_DIR=$HACKRF_INSTALL_DIR
+      run: cmake $GITHUB_WORKSPACE/ -DCMAKE_BUILD_TYPE=Release -DLIBHACKRF_DIR=$HACKRF_INSTALL_DIR -DLIBHACKRF_LIBRARIES=$HACKRF_INSTALL_DIR/lib/libhackrf.dylib -DLIBHACKRF_INCLUDE_DIR=$HACKRF_INSTALL_DIR/include/libhackrf
 
     - name: Build
       working-directory: ${{github.workspace}}/build
@@ -63,7 +63,7 @@ jobs:
     - name: Install
       working-directory: ${{github.workspace}}/build
       run: |
-        sudo cmake --install . --config Release
+        sudo cmake --install . --config Release --prefix=$GITHUB_WORKSPACE/install
 
     - name: List current working directory
       run: ls -lhrt
@@ -73,4 +73,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: hackrf_sweeper-osx
-        path: ${{github.workspace}}/install/bin
+        path: ${{github.workspace}}/install/*
