--- a/.github/workflows/build_osx.yml
+++ b/.github/workflows/build_osx.yml
@@ -4,6 +4,8 @@ on:
   push:
   pull_request:
   workflow_dispatch:
+  schedule:
+    - cron: 1 12 * * 1
 
 jobs:
   build_osx:
@@ -65,12 +67,48 @@ jobs:
       run: |
         sudo cmake --install . --config Release --prefix=$GITHUB_WORKSPACE/install
 
-    - name: List current working directory
-      run: ls -lhrt
+    - name: List install directory
+      run: ls -lhRt install/
 
-    # Publish the contents of install/bin
+    # Publish the contents of install/
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: hackrf_sweeper-osx
         path: ${{github.workspace}}/install/*
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build_osx
+
+    steps:
+      - name: Set Date for Release
+        run: echo "RELEASE_DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+      - name: Download build artifacts (jars)
+        uses: actions/download-artifact@v4
+        with:
+          name: hackrf_sweeper-osx
+          path: hackrf_sweeper-osx-${{ env.RELEASE_DATE }}
+
+        # Create a tarball of the entire directory structure
+      - name: Create Tarball of Artifacts
+        run: |
+          tar -czvf hackrf_sweeper-osx-${{ env.RELEASE_DATE }}.tar.gz hackrf_sweeper-osx-${{ env.RELEASE_DATE }}
+
+      - name: List current working directory
+        run: ls -lhRt
+
+      - name: Create GitHub Release for Stable Tags
+        if: startsWith(github.ref, 'refs/tags/') && endsWith(github.ref, '-stable')
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: Stable Release - ${{ github.ref_name }} - ${{ env.RELEASE_DATE }} (OS X)
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+          files: hackrf_sweeper-osx-${{ env.RELEASE_DATE }}.tar.gz
+          fail_on_unmatched_files: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
